
Bucardo version 4.0.4

  - Fix problem with possible function name collision when the names 
    of the combined columns in the primary key is greater than NAMEDATALEN, 
    which we'll assume is 63. [GSM]

  - Add "bucardo_ctl inspect table" to show all dependencies, as well 
    as cross referencing against herds the table is in [GSM]

  - Fix an error wher validate_sync tries to recreate an existing trigger; 
    occured when a fullcopy sync was set to ping=true [GSM]

  - When using "bucardo_ctl add all tables db=<name>", make sure we only 
    look for the already added tables for that specific database.
    [Selena Deckelmann and Josh Tolley]

  - Add new boolean column to the "db" table named "server_side_prepares", which 
    is true by default. If off, Bucardo will not use server-side prepared 
    statements, and thus can be used in PgBouncer's transaction mode.
    [GSM, idea by Andrew Spencer]

  - When using "bucardo_ctl add all tables", ignore any tables inside 
    schemas starting with 'bucardo' [GSM]

  - Allow --verbose flag for list syncs to show linked tables [GSM]

  - Allow --verbose flag for list tables to show linked herds and syncs [GSM]

  - Change rebuild_index to a smallint: a 1 only runs it with a fullcopy.
    If you really want to use it otherwise, set it to 2 [GSM]

  - Allow the dbhost to be turned off (local socket only) in the db table 
    when using "bucardo_ctl update db <name> host=non. [GSM]


Bucardo version 4.0.3, released September 16, 2009

  - Fix some minor problems with bucardo_ctl and "add sync" [GSM]

  - Allow ping to be specified for new tables added via "add sync" [GSM]


Bucardo version 4.0.2, released September 16, 2009

  - Add the name of the database to the install choices, as some systems 
    have mismatched names (BSD's 'pgsql' user) [Vilem Kebrt]

  - Clear out stale q entries on startup, created when a kid was hit with a 
    kill -9. This was causing Bucardo to think the q slot was still active. [GSM]
